--- a/package.json
+++ b/package.json
@@ -18,13 +18,16 @@
     "fastify": "^3.3.0"
   },
   "devDependencies": {
+    "@types/jest": "^26.0.15",
     "@types/node": "^14.6.4",
     "@typescript-eslint/eslint-plugin": "^4.0.1",
     "@typescript-eslint/parser": "^4.0.1",
     "eslint": "^7.8.1",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.4",
+    "jest": "^26.6.1",
     "prettier": "^2.1.1",
+    "ts-jest": "^26.4.2",
     "ts-node-dev": "^1.0.0-pre.62",
     "typescript": "^4.0.2"
   },
